Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.12.0
-
Windows 7/10, also macOS 10.15.4, Ubuntu 18.04
CMake 3.17.1 / CMake 3.16.6
-
-
e5d9cb377990180dc75b1ec3b209c742e1c01522 (qt-creator/qt-creator/master)
Description
Assume the following file structure:
CMakeLists.txt
src/A/A.cpp
src/X/X.cpp
src/main.cpp
With the following CMakeLists.txt file:
cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
project("Test")
set(SRC_FILES src/A/A.cpp src/X/X.cpp src/main.cpp)
add_executable(testapp ${SRC_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SRC_FILES})
This results in main.cpp not being put into "src" group Instead the full path in the file system is displayed. See screenshot.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-23957 Wrong project structure: CMake source_groups
-
- Closed
-